ejercicio con css

--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
         <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
-        <div>
+        <div class="intro">
             <img src="https://www.cmtv.com.ar/tapas-cd/0086388001610480809.jpg" alt="portada vamo a darle ysy a">
             <ul>
-                <li>Nombre: Elián Parise</li>
-                <li>Apellido: Parise</li>
-                <li>Edad: 19</li>
-                <li>Mail: elianparise@gmail.com</li>
+                <li><span class="lista">Nombre:</span> Elián Parise</li>
+                <li><span class="lista">Apellido:</span> Parise</li>
+                <li><span class="lista">Edad:</span> 19</li>
+                <li><span class="lista">Mails:</span> elianparise@gmail.com</li>
             </ul>
             <p>Buenas, me pidieron un parrafo que hable de mi asi que voy a poner que me gusta la música en general, ultimamente escucho mucho trap.
             Soy fan de Ysy A y de vez en cuando me gusta cocinar alguna receta que no haya hecho. 
             Me interesa mucho la programación y la cyberseguridad, algún dia quiero llegar a ser pentester.<br/> 
             Felizmente en pareja.<br/>
-            Este texto es agregado para tener un cambio en otraRama de git, por favor no prestarle atencion ;)
+            <a href="https://www.youtube.com/watch?v=zbyhx5_tk0o&ab_channel=YSYA">Aca les dejo un link</a> de uno de mis temas favoritos de Ysy A. Espero lo disfruten :D <br/>
+            PD: Sepan disculpar que no uso tildes, estoy haciendo esto en una computadora que no es la mia y tuve que pasar el teclado al idioma ingles para tener los <>, pero puedo seguir mi tarea gracias a github ;)
+
             </p>
         </div>
         <form>
