funny link added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             Soy fan de Ysy A y de vez en cuando me gusta cocinar alguna receta que no haya hecho. 
             Me interesa mucho la programación y la cyberseguridad, algún dia quiero llegar a ser pentester.<br/> 
             Felizmente en pareja.<br/>
-            <a href="https://www.youtube.com/watch?v=zbyhx5_tk0o&ab_channel=YSYA">Aca les dejo un link</a> de uno de mis temas favoritos de Ysy A. Espero lo disfruten :D <br/>
+            <a href="https://www.youtube.com/watch?v=zbyhx5_tk0o&ab_channel=YSYA">Aca les dejo un link</a> de uno de mis temas favoritos de Ysy A. <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">Espero lo disfruten :D </a><br/>
             PD: Sepan disculpar que no uso tildes, estoy haciendo esto en una computadora que no es la mia y tuve que pasar el teclado al idioma ingles para tener los <>, pero puedo seguir mi tarea gracias a github ;)
 
             </p>
